# imkernel_python

./: .gitignore  HowToUse.py  HowToUse3.0.py  HowToUse3D.ipynb  HowToUse3D.py  HowToUseAPI.py  HowToUseNewModel.py  HowToUseUtils.py  NewModelTest.py  README.md  README.rst  __init__.py  aaa.py  how_to_use_2.0.py  imkernel开发手册.md  imkernel手册.md  imkernel用户手册.md  jupyter_lab_config.py  pyproject.toml  requirements.txt  setup.py  start_jupyter.py  test.ps1  test.py
Demo/: CIMSH.ipynb  create_pipe.py  create_pipe_with_data.py  factory_demo.py  factory_demo_2.py
Demo/0725/: im_test.ipynb  output_new.csv
Demo/0731/: Element.py
Demo/0802/: 1create_object.ipynb  1create_object.py  2create_parameter.ipynb  2create_parameter.py  3create_element_parameter.ipynb  3create_element_parameter.py  4add_data_element.ipynb  4add_data_element.py
Demo/0802/algo/: __init__.py
Demo/0806/: 1create_method_object.py  2create_method_parameter.py  3create_element_parameter.py
Demo/0808/: 1create_object.ipynb  CIMSH.ipynb  CIMSH.py  test.ipynb  test.py  型线绘制.ipynb
Demo/0810/: 1create_object.py  CIMSH.ipynb  main.py
Demo/Algo/: test.py
Demo/Algo/cimsh/: main.py
Demo/CIMSH/: CIMSH-1.ipynb  CIMSH-1.py
Demo/CIMSH/Algo/: make_molded.py  molded_wire.7z
Demo/单元模型/: 3create_element_parameter.py
docs/: imkernel开发手册.md
im/: method_model.py  method_parameter.py  method_unit.py  object_model.py  object_parameter.py  object_unit.py
imkernel/: __init__.py
imkernel-test/Jupyter/0725/: im.txt  im_test.ipynb  im_test.py  model.json  output.csv
imkernel/P_select/: requeirments.txt  run.ipynb  代码说明.txt
imkernel/P_select/IGA/: feature_selection_algorithm.py  surrogate_model.py
imkernel/ShowModel/: showModelFunctions.py
imkernel/ShowModel/machineModel/: Mach_B_Axis_0.STL  Mach_C_Axis_0.STL  Mach_X_Axis_0.STL  Mach_Z_Axis_0.STL  filledSTL.stl
imkernel/core/: __init__.py  base_function.py  df_utils.py  industry_model.py  runtime_function.py  utils.py
imkernel/imkernel/: __init__.py  output.ipynb
imkernel/imkernel/ShowModel/: final.pcd  target.pcd
imkernel/imkernel/core/: __init__.py  node_base.py  system.py  tree_base.py  utils.py
imkernel/imkernel/matplot/: main.py
imkernel/jupyter/examples/: Demo.ipynb  重大专项.ipynb
imkernel/matplot/: main.py
imkernel/model/: __init__.py  industry_model.py  industrymodel.py  method_model.py  method_unit.py  new_model.py  new_new_model.py  object_model.py  object_unit.py  u1.0.py  unit_model.py  unit_object.py  unit_parameter.py
kernel/: __init__.py  base_function.py  iml_utils.py  main.py  utils.py
src/imkernel/: __init__.py
src/imkernel/ShowModel/: showModelFunctions.py
test/: test_objectmodel.py
(+24 files in other folders)
