[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imkernel"
version = "1.1.1"
authors = [
    { name = "ermeng", email = "ermeng@ermeng.fun" },
]
description = "imkernel for python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = ["IMKernel", "kernel", "IM", "IL"]

dependencies = [
    "toml",
    "numpy",
    "pandas",
    "loguru",
    "jupyterlab",
    "treelib",
    "matplotlib",
    "pyvista",
    "vtk",
    "trame",
    "ipywidgets"
]

[project.urls]
"Homepage" = "https://github.com/MermengM/imkernel_python"
"Bug Tracker" = "https://github.com/MermengM/imkernel_python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["imkernel*"]